<resources>
    <string name="app_name">GoodWeather</string>
    <string name="home">Home</string>
    <string name="feels_like">Feels like %s</string>
    <string name="weather_icon" translatable="false">weather_icon</string>
    <string name="search">Search</string>
    <string name="ok" translatable="false">OK</string>
    <string name="fine_location_permission_rationale">The fine location permission is needed for core functionality.</string>
    <string name="fine_permission_denied_explanation">Fine location permission was denied but is needed for core functionality.</string>
    <string name="permission_approved_explanation">You approved FINE location, carry (and click) on!</string>
    <string name="cloud_image" translatable="false">cloud image</string>
    <string name="empty_temp" translatable="false">- -</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="calendar_icon" translatable="false">Calendar Icon</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="enter_location_name">Enter location name</string>
</resources>