<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="164dp"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/ic_baseline_cloud_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_cloud_24" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/ic_baseline_cloud_24"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_cloud_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/ic_baseline_cloud_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.263"
            tools:src="@drawable/ic_baseline_cloud_24" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/ic_baseline_cloud_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            tools:src="@drawable/ic_baseline_cloud_24" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="40dp"
            android:contentDescription="@string/cloud_image"
            android:src="@drawable/ic_baseline_cloud_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_cloud_24" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Kazan" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCityName"
            tools:text="street" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_temp"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            tools:text="-5\u00B0" />

        <ImageView
            android:id="@+id/imWeatherIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintEnd_toStartOf="@+id/tvTemperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCityName"
            tools:src="@drawable/few_clouds" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperature">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFeelsLike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="Feels like: -3\u00B0" />

                <TextView
                    android:id="@+id/tvWeatherDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="light rain" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvHourlyForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/transparent_blue">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/imClockIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/weather_icon"
                            android:src="@drawable/ic_baseline_timer_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/ic_baseline_timer_24" />

                        <TextView
                            android:id="@+id/tvHourlyForecastLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:paddingTop="2dp"
                            android:text="@string/hourly_forecast"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/imClockIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Hourly forecast" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/dark_blue"
                            app:layout_constraintTop_toBottomOf="@+id/tvHourlyForecastLabel" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvHourlyWeather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintTop_toBottomOf="@+id/tvHourlyForecastLabel"
                            tools:listitem="@layout/hourly_weather_item" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvDailyForecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/transparent_blue">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView

                            android:id="@+id/imCalendarIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="4dp"
                            android:contentDescription="@string/calendar_icon"
                            android:src="@drawable/ic_baseline_calendar_today_24"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:src="@drawable/ic_baseline_calendar_today_24" />

                        <TextView
                            android:id="@+id/tvDailyForecastLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:paddingTop="2dp"
                            android:text="@string/daily_forecast"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/imCalendarIcon"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="@string/daily_forecast" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/dark_blue"
                            app:layout_constraintTop_toBottomOf="@+id/tvDailyForecastLabel" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvDailyWeather"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintTop_toBottomOf="@+id/tvDailyForecastLabel"
                            tools:listitem="@layout/daily_weather_item" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>